--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+Version 0.2.0     unreleased
+
+	* Add support for tracking current weather conditions in U.S.
+
 Version 0.1.0     17 Jun 2022
 
 	* Initial public release
