--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+Version 0.3.0     18 Jun 2022
+
+	* Improvements/fixes to install process and documentation.
+
 Version 0.2.0     18 Jun 2022
 
 	* Add support for tracking current weather conditions in U.S.
