--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,10 @@
+Version 0.4.3     unreleased
+
+	* Upgrade to Poetry v1.2.0 and make related build process changes.
+	* Add dependency caching to GitHub Actions workflow.
+	* Fix the GitHub Actions matrix build to properly target MacOS.
+	* Update various dependencies for the developer environment.
+
 Version 0.4.2     24 Jun 2022
 
 	* Upgrade to smartapp-sdk v0.5.0.
