--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+Version 0.4.4     unreleased
+
+	* Handle weather.gov errors with a simple logged error message.
+
 Version 0.4.3     05 Sep 2022
 
 	* Upgrade to Poetry v1.2.0 and make related build process changes.
