--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,8 @@
+Version 0.4.5     unreleased
+
+	* Refactor the run script and pre-commit hooks to reduce duplication.
+	* Rework the GitHub Actions build process to pull out shared code.
+
 Version 0.4.4     18 Oct 2022
 
 	* Handle weather.gov errors with a simple logged error message.
