--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,8 @@
+Version 0.4.6     unreleased
+
+	* Support Python 3.11.
+	* Convert to modern importlib-resources files() pattern to fix deprecation.
+
 Version 0.4.5     24 Oct 2022
 
 	* Refactor the run script and pre-commit hooks to reduce duplication.
