--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+Version 0.4.7     unreleased
+
+	* Add NOTICE file to sdist, alongside existing LICENSE file.
+
 Version 0.4.6     09 Nov 2022
 
 	* Support Python 3.11.
