--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,4 @@
-Version 0.4.7     unreleased
+Version 0.4.7     30 Dec 2022
 
 	* Add NOTICE file to sdist, alongside existing LICENSE file.
 	* Automate the existing manual release process using GitHub Actions.
