--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,8 @@
+Version 0.4.8     unreleased
+
+	* Upgrade all dependencies to the latest major version.
+	* Address dependabot warning for starlette < 0.25.0 via fastapi.
+
 Version 0.4.7     30 Dec 2022
 
 	* Add NOTICE file to sdist, alongside existing LICENSE file.
