--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+Version 0.4.9     unreleased
+
+	* Rewrite request-related tests to use the responses framework.
+
 Version 0.4.8     26 Feb 2023
 
 	* Upgrade all dependencies to the latest major version.
