--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,6 @@
 Version 0.4.9     unreleased
 
+	* Fix checktabs to be safe for file named '-'.
 	* Rewrite request-related tests to use the responses framework.
 
 Version 0.4.8     26 Feb 2023
