--- a/Changelog
+++ b/Changelog
@@ -2,7 +2,7 @@ Version 0.4.9     unreleased
 
 	* Fix checktabs to be safe for file named '-'.
 	* Rewrite request-related tests to use the responses framework.
-	* Update dependencies and address requests CVE-2023-32681.
+	* Address requests CVE-2023-32681 and starlette CVE-2023-29159.
 
 Version 0.4.8     26 Feb 2023
 
