--- a/Changelog
+++ b/Changelog
@@ -1,8 +1,9 @@
-Version 0.4.9     unreleased
+Version 0.4.9     07 Jun 2023
 
 	* Fix checktabs to be safe for file named '-'.
 	* Rewrite request-related tests to use the responses framework.
 	* Address requests CVE-2023-32681 and starlette CVE-2023-29159.
+	* Upgrade to Poetry v1.5.1 and update other dependencies.
 
 Version 0.4.8     26 Feb 2023
 
