--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+Version 0.4.10    unreleased
+
+	* Document new install method using pipx instead of pip.
+
 Version 0.4.9     07 Jun 2023
 
 	* Fix checktabs to be safe for file named '-'.
