--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+Version 0.4.11     01 Oct 2023
+
+	* Improve error handling for some new weather.gov API failures.
+
 Version 0.4.10     11 Jun 2023
 
 	* Document new install method using pipx instead of pip.
