--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,9 @@
+Version 0.4.12     unreleased
+
+	* Upgrade major dependencies.
+	* Upgrade build process to Poetry v1.6.1.
+	* Add support for Python v3.12 and drop support for v3.8.
+
 Version 0.4.11     01 Oct 2023
 
 	* Improve error handling for some new weather.gov API failures.
