--- a/Changelog
+++ b/Changelog
@@ -2,7 +2,7 @@ Version 0.4.12     unreleased
 
 	* Upgrade major dependencies.
 	* Upgrade build process to Poetry v1.6.1.
-	* Add support for Python v3.12 and drop support for v3.8.
+	* Add support for Python v3.12.
 
 Version 0.4.11     01 Oct 2023
 
