--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,8 @@
+Version 0.4.14     unreleased
+
+	* Update jinja2 to address CVE-2024-22195 from Dependabot.
+	* Update dependencies and fix new MyPy warning about covariance.
+
 Version 0.4.13     05 Nov 2023
 
 	* Update urllib3 to address Dependabot warnings.
