--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,6 @@
-Version 0.4.14     17 Jan 2024
+Version 0.4.14     unreleased
 
+	* Require minimum Python version v3.10.
 	* Update jinja2 to address CVE-2024-22195 from Dependabot.
 	* Update dependencies and fix new MyPy warning about covariance.
 
