--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,13 @@
 Version 0.4.15     unreleased
 
+	* Upgrade to Poetry v1.8.0 and make related adjustments.
+	* Disable Python keyring via poetry.toml.
+	* Update Poetry install instructions in DEVELOPER.md.
+	* Pull in latest version of run-script-framework.
+	* Update GHA workflows to use Poetry v1.8.0.
+
+Version 0.4.15     unreleased
+
 	* Update cryptography to address CVE-2024-0727 from Dependabot.
 	* Update fastapi and starlette to address CVE-2024-24762 from Dependabot.
 
