--- a/Changelog
+++ b/Changelog
@@ -4,7 +4,7 @@ Version 0.4.15     unreleased
 	* Disable Python keyring via poetry.toml.
 	* Update Poetry install instructions in DEVELOPER.md.
 	* Pull in latest version of run-script-framework.
-	* Update GHA workflows to use Poetry v1.8.0.
+	* Upgrade to gha-shared-workflows@v4 with new Poetry setup.
 
 Version 0.4.15     unreleased
 
