--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,4 @@
-Version 0.4.15     unreleased
+Version 0.4.15     26 Feb 2024
 
 	* Upgrade to Poetry v1.8.0 and make related adjustments.
 	* Disable Python keyring via poetry.toml.
