Update transitive dependencies to address Dependabot warnings

--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,7 @@ Version 0.4.16     unreleased
 
 	* Pull in latest updates from run-script-framework.
 	* Simplify GHA integration with coveralls.io.
+	* Update transitive dependencies to address Dependabot warnings.
 
 Version 0.4.15     26 Feb 2024
 
