--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,4 @@
-Version 0.4.16     unreleased
+Version 0.4.16     15 Oct 2024
 
 	* Pull in latest updates from run-script-framework.
 	* Simplify GHA integration with coveralls.io.
