--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+Version 0.4.17     unreleased
+
+	* Upgrade to gha-shared-workflows@v7 with publish improvements.
+
 Version 0.4.16     15 Oct 2024
 
 	* Pull in latest updates from run-script-framework.
