--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,6 @@
 Version 0.4.17     unreleased
 
+	* Update dependencies to address Dependabot warnings.
 	* Upgrade to gha-shared-workflows@v7 with publish improvements.
 
 Version 0.4.16     15 Oct 2024
