--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,7 @@ Version 0.4.17     unreleased
 
 	* Update dependencies to address Dependabot warnings.
 	* Upgrade to gha-shared-workflows@v7 with publish improvements.
+	* Set asyncio_default_fixture_loop_scope=function in pytest.ini.
 
 Version 0.4.16     15 Oct 2024
 
