--- a/Changelog
+++ b/Changelog
@@ -4,6 +4,7 @@ Version 0.4.17     unreleased
 	* Update dependencies to address Dependabot warnings.
 	* Upgrade to gha-shared-workflows@v7 with publish improvements.
 	* Set asyncio_default_fixture_loop_scope=function in pytest.ini.
+	* Rename pytest.ini to .pytest.ini for a cleaner repo listing.
 
 Version 0.4.16     15 Oct 2024
 
