--- a/Changelog
+++ b/Changelog
@@ -6,6 +6,7 @@ Version 0.4.17     unreleased
 	* Upgrade to gha-shared-workflows@v7 with publish improvements.
 	* Set asyncio_default_fixture_loop_scope=function in pytest.ini.
 	* Rename pytest.ini to .pytest.ini for a cleaner repo listing.
+	* Change the default branch in GitHub from master to main.
 
 Version 0.4.16     15 Oct 2024
 
