--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,4 @@
-Version 0.4.17     unreleased
+Version 0.4.17     02 Jan 2025
 
 	* Add GitHub security policy in SECURITY.md.
 	* Pull in latest version of run-script-framework.
