--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,7 @@ Version 0.4.18    unreleased
 
 	* Migrate to Poetry v2 and project-managed Poetry plugins.
 	* Move configuration into pyproject.toml for pytest, mypy & coverage.
+	* Update all dependencies and outdated constraints.
 
 Version 0.4.17     02 Jan 2025
 
