--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,11 @@
+Version 0.4.18    unreleased
+
+	* Migrate to Poetry v2 and project-managed Poetry plugins.
+	* Move configuration into pyproject.toml for pytest, mypy & coverage.
+	* Upgrade to gha-shared-workflows@v8 for Poetry v2 support.
+	* Upgrade to latest smartapp-sdk, which uses arrow instead of pendulum.
+	* Update all dependencies and outdated constraints.
+
 Version 0.4.17     02 Jan 2025
 
 	* Add GitHub security policy in SECURITY.md.
